remove default code from yarn create vite

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+
+    <title>Trail Buddies</title>
+
+    <link rel="icon" type="image/svg+xml" href="images/favicon.png" />
+    <link rel="stylesheet" href="styles/index.scss">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <header>
+      <img id="header" src="/images/header.jpg" alt="Blue sky and rocks on a hiking route" height="200" />
+    </header>
+    <main>
+
+    </main>
   </body>
 </html>
