try get the sidebar to work

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="styles/index.scss">
   </head>
   <body>
-    <header>
-      <img id="header" src="/images/header.jpg" alt="Blue sky and rocks on a hiking route" height="200" />
-    </header>
-    <main>
+    <div id="container">
+      <div id="image">
+        <h1>Trail Buddies</h1>
+        <p>Find friends to hike with!</p>
+      </div>
 
-    </main>
+      <main>
+        Get the app on the Android & iOS stores!
+      </main>
+    </div>
   </body>
 </html>
