change links to relative paths

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Trail Buddies</title>
 
-    <link rel="icon" type="image/svg+xml" href="images/favicon.png" />
-    <link rel="stylesheet" href="styles/index.scss">
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
     <div id="container">
