--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Trail Buddies</title>
+		<title>Trail Buddies</title>
 
-    <link rel="icon" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./styles/index.scss" />
-  </head>
-  <body>
-    <div id="container">
-      <div id="image">
-        <h1>Trail Buddies</h1>
-        <p>Find friends to hike with!</p>
-      </div>
+		<link rel="icon" href="./images/favicon.png" />
+		<link rel="stylesheet" href="./styles/index.scss" />
+	</head>
+	<body>
+		<div id="container">
+			<header id="image">
+				<h1>Trail Buddies</h1>
+				<p>Find friends to hike with!</p>
+			</header>
 
-      <main>
-        Get the app on the Android & iOS stores!
-      </main>
-    </div>
-  </body>
+			<main>Get the app on the Android & iOS stores!</main>
+
+			<footer>
+				<p>
+					Interested in joining this project? See <a href="https://github.com/TrailBuddies" rel="external">this</a>
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
