change 'See' to 'Read'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<footer>
 				<p>
-					Interested in joining this project? See <a href="https://github.com/TrailBuddies" rel="external">this</a>
+					Interested in joining this project? Read <a href="https://github.com/TrailBuddies" rel="external">this</a>
 				</p>
 			</footer>
 		</div>
