set join anchor to /join.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 			<main>Get the app on the Android & iOS stores!</main>
 
 			<footer>
-				<p>
-					Interested in joining this project? Read <a href="https://github.com/TrailBuddies" rel="external">this</a>
-				</p>
+				<p>Interested in joining this project? Read <a href="/join.html">this</a></p>
 			</footer>
 		</div>
 	</body>
