--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Trail Buddies</title>
 
 		<link rel="icon" href="./images/favicon.png" />
+		<link rel="stylesheet" href="./styles/global.scss" />
 		<link rel="stylesheet" href="./styles/index.scss" />
 	</head>
 	<body>
