add content to join page

--- a/join.html
+++ b/join.html
@@ -7,9 +7,25 @@
 		<title>Join the dev team!</title>
 
 		<link rel="icon" href="./images/favicon.png" />
-		<link rel="stylesheet" href="./styles/fonts.scss" />
+		<link rel="stylesheet" href="./styles/global.scss" />
 	</head>
-	<body style="text-align: center; font-family: Quicksand, sans-serif;">
-		<h2>under construction</h2>
+	<body style="padding: 5%">
+		<h2>Joining the project</h2>
+
+		<p>
+			The only thing to really know is that you'll need to work with Ruby on Rails, Flutter, and web technologies (HTML/CSS/JS/REACT). <br />
+			We (I) manage the project and store all the code on GitHub. 
+		</p>
+
+		<p>
+			If you're fine with all that and you're willing to learn and adapt to the coding style I'm using, then please reach out to me personally via:
+		</p>
+
+		<ul>
+			<li>Email: <a href="mailto:matievisthekat@gmail.com">matievisthekat@gmail.com</a></li>
+			<li>Discord: <a href="https://discord.com/channels/@me">matievisthekat#1337</a></li>
+			<li>GitHub: <a href="https://github.com/matievisthekat">matievisthekat</a></li>
+			<li>TheCodeProject: <a href="https://www.codeproject.com/Members/matievisthekat">matievisthekat</a></li>
+		</ul>
 	</body>
 </html>
