add quotes and styling

--- a/join.html
+++ b/join.html
@@ -13,12 +13,36 @@
 		<h2>Joining the project</h2>
 
 		<p>
-			The only thing to really know is that you'll need to work with Ruby on Rails, Flutter, and web technologies (HTML/CSS/JS/REACT). <br />
-			We (I) manage the project and store all the code on GitHub. 
+			The only thing to really know is that you'll need to work with Ruby on Rails, Flutter, and web technologies
+			(HTML/CSS/JS/REACT). <br />
+			We manage the project and store all the code on GitHub.
 		</p>
 
 		<p>
-			If you're fine with all that and you're willing to learn and adapt to the coding style I'm using, then please reach out to me personally via:
+			We're currently working with Dart (Flutter), Ruby (Rails), and HTML/SCSS. We will probably be moving from
+			HTML to some JS framework in the future
+		</p>
+
+		<div style="background:linear-gradient(to right top,#FF0099,#6633FF); border-radius:5px; padding:12px; box-shadow:6px 6px 12px 0.5px #c6c2c2">
+			<h3>Matthew Stead (matievisthekat):</h3>
+
+			<p>
+				"I am a keen developer myself and I'm looking for fellow programmers to collaborate with. <br />
+				I like to be pretty organised, but don't let that scare you away. I really just want to chill and code with
+				people who are as passionate about the project as myself.
+			</p>
+
+			<p>"I'm not looking for expert developers and I'm willing to spend some time teaching/explaining things.</p>
+
+			<p>
+				"I can't promise any monetary payment, but if the project was to generate profit (one day) and you are still
+				a part of the project then you will get an equal share of the profits"
+			</p>
+		</div>
+
+		<p>
+			If you're fine with all that and you're willing to learn and adapt to the coding style I'm using, then
+			please reach out to me personally via:
 		</p>
 
 		<ul>
